--- a/index.html
+++ b/index.html
@@ -14,6 +14,42 @@
     <link rel="icon" type="image/x-icon" href="./logo-boolean.ico" />
   </head>
   <body>
+    <div class="container py-5">
+      <div class="card text-center">
+        <div class="card-header fs-1">Calcola il prezzo del tuo biglietto</div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-4">
+              <h5>Nome Cognome</h5>
+              <input
+                class="form-control"
+                type="text"
+                placeholder=""
+                aria-label="default input example"
+              />
+            </div>
+            <div class="col-4">
+              <h5>Km da percorrere</h5>
+              <input
+                class="form-control"
+                type="text"
+                placeholder=""
+                aria-label="default input example"
+              />
+            </div>
+            <div class="col-4">
+              <h5>Età</h5>
+              <select class="form-select" aria-label="Default select example">
+                <option selected>Scegli un campo</option>
+                <option value="1">Minorenne</option>
+                <option value="2">Maggiorenne</option>
+                <option value="3">Over 65</option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="./JS/main.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
